welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: not found: value EST
		if (getDirection() == EST) {
                                      ^SnakeBuggle:8: error: method murNord has return statement; needs result type
				return true;
                                ^SnakeBuggle:12: error: method murNord has return statement; needs result type
				return false;
                                ^SnakeBuggle:15: error: not found: value OUEST
		else if (getDirection() == OUEST) {
                                           ^SnakeBuggle:19: error: method murNord has return statement; needs result type
				return true;
                                ^SnakeBuggle:23: error: method murNord has return statement; needs result type
				return false;
                                ^SnakeBuggle:29: error: method posFinale has return statement; needs result type
			return true;
                        ^SnakeBuggle:31: error: method posFinale has return statement; needs result type
		else return false;
                     ^SnakeBuggle:37: error: not found: value EST
		else if (getDirection() == EST) {
                                           ^SnakeBuggle:42: error: not found: value OUEST
		else if (getDirection() == OUEST) {
                                           ^